<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboplan_simple_ik</name>
  <version>0.2.0</version>
  <description>Simple inverse kinematics solver for RoboPlan.</description>
  <maintainer email="sebas.a.castro@gmail.com">Sebastian Castro</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>roboplan</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
